--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -14,7 +14,7 @@
 
     &__img {
         height: 400px;
-        background-image: url("../../images/img1.jpg");
+        background-image: url("../images/img1.jpg");
         @include bg-cover(center);
 
         @include md {
@@ -55,7 +55,7 @@
 .onegear__img {
     height: 400px;
     width: 100%;
-    background-image: url("../../images/img2.jpg");
+    background-image: url("../images/img2.jpg");
     @include bg-cover(center);
 
     @include md {
@@ -70,7 +70,7 @@
 .stripped__img {
     height: 400px;
     width: 100%;
-    background-image: url("../../images/img3.jpg");
+    background-image: url("../images/img3.jpg");
     @include bg-cover(center);
 
     @include md {
@@ -117,7 +117,7 @@
         position: relative;
         height: 400px;
         width: 100%;
-        background-image: url("../../images/img4.jpg");
+        background-image: url("../images/img4.jpg");
         @include bg-cover(top);
         background-attachment: fixed;
 
