--- a/scss/all.scss
+++ b/scss/all.scss
@@ -21,9 +21,10 @@
 
 @import "./grid/grid";
 @import "./helpers/helpers";
-@import "./utilities/utilities.scss";
+@import "./utilities/utilities";
 
 @import "./base/base";
 @import "./layout/layout";
 
 @import "./pages/index";
+@import "./utilities/effect";
