--- a/scss/utilities/_utilities.scss
+++ b/scss/utilities/_utilities.scss
@@ -74,7 +74,7 @@
     }
 }
 
-.hover-rotatex-turn-round {
+.hover-rotateX-turn-round {
     transition: transform 0.7s;
 
     &:hover {
@@ -91,7 +91,7 @@
     }
 }
 
-.hover-bgdark-lg-left {
+.hover-bgDark-lg-left {
     @include lg {
         &::before {
             content: '';
@@ -119,7 +119,7 @@
     }
 }
 
-.hover-bglight-lg-left {
+.hover-bgLight-lg-left {
     @include lg {
         &::before {
             content: '';
