--- a/css/all.css
+++ b/css/all.css
@@ -6148,8 +6148,8 @@ ul {
       -o-transition: transform 0.3s;
       transition: transform 0.3s;
       transition: transform 0.3s, -webkit-transform 0.3s;
-      -webkit-box-shadow: 0 3px 6px 2px rgba(0, 0, 0, 0.25);
-      box-shadow: 0 3px 6px 2px rgba(0, 0, 0, 0.25); }
+      -webkit-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25); }
   .article__item__img {
     height: 300px;
     -o-object-fit: cover;
