--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -162,7 +162,7 @@
         &:hover {
             transform: scale(0.8);
             transition: transform 0.3s;
-            box-shadow: 0 3px 6px 2px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
         }
     }
 
