--- a/scss/helpers/_helpers.scss
+++ b/scss/helpers/_helpers.scss
@@ -1,4 +1,5 @@
-@mixin text-hidden {
+@mixin text-hidden($url) {
+    background-image: url($url);
     overflow: hidden;
     text-indent: 101%;
     background-repeat: no-repeat;
@@ -6,7 +7,9 @@
     white-space: nowrap;
 }
 
-@mixin bg-cover($position) {
+@mixin bg-cover($url, $height, $position) {
+    background-image: url($url);
+    height: $height;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: $position;
