--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,4 +1,16 @@
 /* 全站設定 */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:ital,wght@1,900&family=Roboto&display=swap');
+
+// 標題字體統一設定
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Merriweather';
+}
+
 img {
     display: block;
     max-width: 100%;
