--- a/scss/all.scss
+++ b/scss/all.scss
@@ -23,6 +23,7 @@
 
 @import "./base/base";
 @import "./layout/layout";
+@import "./layout/loading";
 
 @import "./pages/index";
 @import "./utilities/effect";
