--- a/scss/utilities/_utilities.scss
+++ b/scss/utilities/_utilities.scss
@@ -176,6 +176,11 @@
     }
 }
 
+// overflow-hidden
+.overflowX-hidden {
+    overflow-x: hidden;
+}
+
 
 // $theme-colors
 @mixin theme-colors($grid-breakpoints: null) {
